<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tucao</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_first_screen">FirstScreenActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="feed_back">反馈</string>
    <string name="about">关于</string>
    <string name="check_update">更新</string>
    <string name="setting">设置</string>
    <string name="download">下载</string>
    <string name="login">登录</string>
    <string name="search_hint">请输入搜索内容</string>
    <string name="title_activity_video_detail">VideoDetailActivity</string>
    <string name="title_activity_cartoon_list">CartoonListActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="title_activity_search_result">SearchResultActivity</string>
    <string name="title_activity_down_load_list">DownLoadListActivity</string>

</resources>
